@@ -1,3 +1,10 @@
+2006-07-20 Raphael Neider <rneider AT web.de>
+
+	* src/pic/device.c (addMemRange,assignRegister): suppress verbose
+	  output unless SDCCPICDEBUG is set
+	* device/lib/pic16/Makefile.rules (%.lib target): suppress verbose
+	  output if SILENT is set
+
 2006-07-11 Borut Razem <borut.razem AT siol.net>
 
 	* doc/README.txt: updated
@@ -13,7 +20,7 @@
 2006-07-08 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/include/mcs51/XC866.h: added sbit definitions for Px_x, P1_x, P2_x
-	* src/pic16/glue.c (initPointer), fixed bug 1496419 for pic16
+	* src/pic16/glue.c (initPointer): fixed bug 1496419 for pic16
 
 2006-07-06 Maarten Brock <sourceforge.brock AT dse.nl>
 
